# jpeg-decoder

contrib/: gmock-gtest-all.cc
jpeg-decoder/: CMakeLists.txt  common.cmake  decoder.cpp  decoder.h  decoder_utils.cpp  decoder_utils.h  huffman.cpp  huffman.h  image.h  libjpg_reader.h  png_encoder.h  test_baseline.cpp  test_commons.h  test_progressive.cpp
jpeg-decoder/contrib/gmock/: gmock.h
